--- a/main.css
+++ b/main.css
@@ -5,8 +5,10 @@ table.table1 {
 
 }
 
-th,
-td {
+.table1 th{
+	border-bottom: 1px solid #cecfd5;
+}
+.table1 td {
 	border-bottom: 1px solid #cecfd5;
 	padding: 10px;
 	
@@ -20,15 +22,18 @@ table.table2 {
 	text-align: center
 }
 
-th,
-td {
+.table2 td {
 	border-top: 1px solid #cecfd5;	
+}
+
+.table2 tr {
+	border-bottom: 1px solid #cecfd5;
 }
 
 .big-number {
 	font-size: 40px;
 	font-weight: bold;
-	;
+	
 }
 
 .byline {
@@ -36,8 +41,53 @@ td {
 	color: #cecfd5;
 }
 
-table.table3 {
-	width: auto; 	
+
+
+.table3 div {
+	background-color: steelblue;
+
+  font: 12px sans-serif;
+  text-align: left;
+  line-height: 20px;
+  vertical-align: middle;
+  color: white;
+
+  padding: 2px;
+  height: 20px;
+  
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+ }
+
+
+.table3 td{
+	width: 500px;
 }
+
+/*.white-box {
+	width: 600px;
+	margin: 0 auto;
+	background: #fff;
+	text-align: left;
+	border: 1px solid #ccc;
+	border-top: none;
+	padding: 25px;
+	border-radius: 5px;
+	position: absolute;
+	top: 25%;
+	left: 25%;
+}
+
+ .light-box {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: grey;
+	text-align: center;
+} */
+ 
+
 
 
