--- a/normalize.css
+++ b/normalize.css
@@ -260,7 +260,7 @@ figure {
  * Define consistent border, margin, and padding.
  */
 
-fieldset {
+/fieldset {
     border: 1px solid #c0c0c0;
     margin: 0 2px;
     padding: 0.35em 0.625em 0.75em;
